--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
     "geolocation": "^0.0.0",
     "http": "^0.0.1-security"
   },
